# opencode-crane

./: .gitignore  .opencode.json  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.txt  Makefile  OPENCODE_GH_FEAT_DESIGN.md  README.md  SKILL.md  pyproject.toml  test.tex
.crane/journal-system/: README.md  chapter-checklist.yaml  coach-mentor-role.yaml  questionnaire.yaml  reviewer-inspector-role.yaml  risk-assessor-integration-complete.yaml  risk-scoring-model.yaml  submission-config.yaml
.crane/memory/: default.yaml  sisyphus.yaml
.github/ISSUE_TEMPLATE/: feature-request.yml  research-task.yml
.github/workflows/: test.yml
.opencode/: opencode.json
.sisyphus/: P1-semantic-search-plan.md
.sisyphus/drafts/: crane-innovation-breakthroughs.md  opencode-crane-innovation-directions.md
_paper_trace/: README.md
_paper_trace/v2/: 1_contribution.yaml  3_section_outline.yaml  6_research_question.yaml  7_change_log_impact.yaml  8_limitation_reviewer_risk.yaml
data/: review_patterns.yaml
data/journals/: conference_templates.yaml  q1_journal_profiles.yaml  sjr_snapshot.csv
data/rewrite_sessions/: rw_1775869729_128690df.yaml  rw_1775869730_89190adf.yaml
docs/: DEVELOPMENT_DIRECTIONS.md  DEVELOPMENT_PLAN_Q2.md  INTERACTIVE_REWRITE.md  JOURNAL_INTEGRATION.md  PREFERENCE_LEARNING.md  THESIS_SUBMISSION.md  WRITING_STYLE_GUIDE.md  mcp-integration.md  service-mappings.md  v0.10.1_ARCHITECTURE.md
docs/guide/: installation.md  trust-calibration.md
docs/tutorials/: 01-literature-review.md  02-submission-check.md  03-team-research.md  04-semantic-search.md  README.md
papers/MLJ/: MLJ-MAIN.aux  MLJ-MAIN.bak0  MLJ-MAIN.bak1  MLJ-MAIN.bak2  MLJ-MAIN.bak3  MLJ-MAIN.bak4  MLJ-MAIN.bak5  MLJ-MAIN.bbl  MLJ-MAIN.blg  MLJ-MAIN.fdb_latexmk  MLJ-MAIN.fls  MLJ-MAIN.out  MLJ-MAIN.tex  MLJ-protected-zones.yaml  references.bib
prompts/: agent_review_prompt.txt
prompts/lecun-frameworks/: README.md
references/: bibliography.bib
references/papers/: 2603-19223v1.yaml  2603-19225v1.yaml  (+52 more)
scripts/: install.sh  mcp_integration_test.py  mcp_test_client.py  setup-project.sh  upgrade.sh
tests/: conftest.py  test_installer_sync.py  test_main_entrypoint.py  test_readme_integration.py  test_release_sync.py  test_workspace.py
(+328 files in other folders)
