[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencode-crane"
version = "0.14.0"
description = "CRANE - Autonomous Research Assistant MCP Server for OpenCode"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "requests",
    "feedparser",
    "PyPDF2",
    "pyyaml",
    "bibtexparser",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[project.scripts]
crane = "crane.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/crane"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "F821", "F841", "E741"]  # 忽略既有問題

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: end-to-end workflow tests (deselect with '-m not integration')",
]

[tool.coverage.run]
source = ["crane"]

[tool.coverage.report]
show_missing = true
fail_under = 80
